# iniabu

./: .bumpversion.cfg  .coveragerc  .darglint  .editorconfig  .flake8  .gitignore  .justfile  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  dev-requirements.txt  noxfile.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: black.yml  codeql-analysis.yml  docs_testing.yml  lint.yml  lint_and_test.yml  package_testing.yml  python-package.yml  python-publish.yml  release_on_pypi.yml
dev/asplund09/: asplund09_elements.txt  asplund09_isotopes.txt  asplund09_to_dict.py
dev/lodders09/: lodders09_eles_tab6.txt  lodders09_to_dict.py
dev/nist_data/: nist_all.txt  nist_data_to_dict.py  nist_iso_ratios.txt
docs/: background.rst  conf.py  config.rst  index.rst  intro.rst  tests.rst
docs/api/: elements.rst  index.rst  isotopes.rst  main.rst  utilities.rst
docs/dev/: index.rst
docs/figures/: int_norm.py
docs/jupyter_examples/: astronomy_example.ipynb  cosmochemistry_example.ipynb  introduction.ipynb
iniabu/: __init__.py  elements.py  isotopes.py  main.py  utilities.py
iniabu/data/: __init__.py  asplund09.py  lodders09.py  nist15.py
iniabu/read_data/: __init__.py
src/iniabu/: __init__.py  elements.py  isotopes.py  main.py  utilities.py
src/iniabu/data/: asplund09.py  nist15_isomasses_all.py
tests/: __init__.py  conftest.py  test_elements.py  test_init.py  test_isotopes.py  test_main.py  test_main_bracket.py  test_main_delta.py  test_main_int_norm.py  test_main_ratios.py  test_utilities.py
tests/data/: __init__.py  test_asplund09.py  test_lodders09.py  test_nist15.py
