[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "iniabu"
authors = [
    {name="Reto Trappitsch", email="reto@galactic-forensics.space"}
]
dependencies = ["numpy"]
requires-python=">=3.8"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/galactic-forensics/iniabu"
Documentation = "https://iniabu.readthedocs.io"

[project.optional-dependencies]
dev = [
    "darglint>=1.5.1",
    "flake8",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-import-order",
    "bandit"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme"
]
test = [
    "hypothesis",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=iniabu -v"
testpaths = "tests"

[tool.flit.sdist]
exclude = [".gitignore", ".readthedocs.yaml", "dev/"]

[tool.setuptools_scm]
write_to = "iniabu/_version.py"
